--- a/index.html.html
+++ b/index.html.html
@@ -72,6 +72,10 @@ h1{
     color:#666;
     margin-top:5px;
 }
+.logo{
+    max-width:100%;
+    height:auto;
+}
 </style>
 </head>
 
@@ -80,7 +84,7 @@ h1{
 <div class="wrapper">
    
 
- <img src="costco-logo-BfSPDyka.png" width="400">
+ <img src="costco-logo-BfSPDyka.png" class="logo">
 
  <h1>Click Below To Claim Your $750 Gift Card</h1>
  
